# bsky-tsumeshogi-bot

./: Cargo.toml  README.md
.github/workflows/: bot.yml
src/: bsky.rs  lib.rs  scraper.rs
