[package]
name = "bsky-tsumeshogi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
atrium-api = "0.15.0"
atrium-xrpc-client = "0.2.0"
chrono = "0.4.31"
regex = "1.10.2"
reqwest = "0.11.22"
select = "0.6.0"
tokio = { version = "1.34.0", features = ["macros", "rt"] }
