[package]
name = "bsky-tsumeshogi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
atrium-api = "0.17.2"
atrium-xrpc-client = "0.3.0"
regex = "1.10.2"
reqwest = "0.11.22"
select = "0.6.0"
shogi-img = { git = "https://github.com/sugyan/shogi-img.git", rev = "bb50c7b" }
shogi-kifu-converter = "0.2.1"
tokio = { version = "1.34.0", features = ["macros", "rt"] }
